Changed spacing between commenter username and text. Fixes #81

--- a/Frontend/src/app/components/comment-dialog/comment-dialog.component.css
+++ b/Frontend/src/app/components/comment-dialog/comment-dialog.component.css
@@ -79,7 +79,6 @@ mat-dialog-content {
 .comment-link {
   color: inherit;
   text-decoration: none;
-  margin-right: 20px;
 }
 
 .comment-link:hover {
